# automerge-py

./: Cargo.toml  README.md  bench.py  pyproject.toml  run_tests.sh  test.py
.github/workflows/: wheels.yml
automerge/: __init__.py  _backend.pyi  automerge_backend.pyi
python/automerge/: __init__.py
src/: lib.rs
tests/: test_backend_concurrency.py  test_sync.py
