[package]
name = "automerge"
version = "0.1.1"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"
rust-version = "1.65.0"

[lib]
name = "_backend"
crate-type = ["cdylib"]

[dependencies]
automerge = "^0.5.7"
ouroboros = "0.18.3"
tracing-subscriber = "0.3"
tracing = "0.1.40"

[dependencies.pyo3]
version = "0.20.3"
